Logging of execution steps and batches #202
preliminary refactoring - Execution must store the task name and extractor name separately